# delay-discounting-mvpa

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_uv.sh
analyses/data_orientation/: looking_at_data.ipynb
analyses/good_subjects/: get_good_subids.ipynb  good_subids.txt  subject_status.csv
analyses/group_analysis_reality_check/: develop_choice_contrast_comparison.ipynb
analyses/lsa_modeling/: dev_lsa_code.ipynb  run_lsa.py  run_lsa_all.batch
analyses/make_group_mask/: make_group_mask.ipynb
analyses/pattern_similarity_exploration/: motor_roi_exploration.ipynb  secondary_exploration.ipynb
analyses/sandbox/: get_good_subids.py  good_subids.txt
analysis_code/notebooks/: dev_lsa_code.ipynb
analysis_code/scripts/: run_lsa.py
analysis_registry/: README.md  build_master_registry.py  master_registry.md  master_registry.yaml
analysis_registry/analyses/: data_orientation.yaml  get_good_subject.yaml  group_analysis_reality_check.yaml  lsa_modeling.yaml  make_group_mask.yaml  pattern_similarity_exploration.yaml
configs/: config.yaml
src/delay_discounting_mvpa/: __init__.py  config_loader.py  design_utils.py  fmri_io.py  fmri_model.py  io_utils.py
src/delay_discounting_mvpa/utils/: provenance.py
